--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.10.6",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.4",
     "@angular/language-service": "^6.0.4",
@@ -51,12 +51,12 @@
     "codelyzer": "^4.3.0",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.1.0",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.1",
     "ts-node": "^6.1.0",
     "tslint": "^5.10.0",
     "typescript": "^2.7.2"
